# Cogitura

./: .dockerignore  .env.example  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  QUICKSTART.md  README.md  docker-compose.yml  generate_massive_parallel.py  monitor_generation.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py  setup.sh  tox.ini
.github/workflows/: ci.yml  code-quality.yml  docker.yml  publish.yml
data/audio/: .gitkeep
data/datasets/: .gitkeep
data/test_results/: .gitkeep
docs/en/: README.md
docs/pt-br/: README.md
models/: vocab.json
scripts/: analyze_data.py  export_to_huggingface.py  run_full_pipeline.py
src/cogitura/: __init__.py  cli.py  config.py  logger.py  utils.py
src/cogitura/core/: __init__.py  database_manager.py  dictionary_sources.py  evaluator.py  sentence_generator.py  trainer.py  tts_processor.py
src/cogitura/providers/: __init__.py  ai_providers.py
tests/: conftest.py  test_ai_providers.py  test_config.py  test_database_manager.py  test_dictionary_sources.py  test_evaluator.py  test_imports.py  test_sentence_generator.py  test_trainer.py  test_tts_processor.py  test_utils.py
